Fix display width on mobile

--- a/style.css
+++ b/style.css
@@ -176,6 +176,8 @@ h1 {
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-around;
+  width: 80%;
+  padding: 0 30px;
   height: 100px;
   margin: 30px 0;
   background-color: var(--display-bkgd);
@@ -192,7 +194,6 @@ h1 {
   }
 
   @media only screen and (min-width: 500px) {
-    width: 90%;
     height: 150px;
   }
 }
